# YBTrack

./: README.md
Data/mot17_half/: train.txt  val.txt  说明.txt
Data/visdrone/: val.txt
Data/visdrone_relabel/: val.cache
Data/yaml/: visdrone_all.yaml  visdrone_all_relabel.yaml
Data_Config_Files/mot17/: test.txt  train.txt
Data_Config_Files/mot17_half/: test.txt
Data_Config_Files/visdrone/: val.cache
Data_Config_Files/visdrone_relabel/: test.txt  train.txt
Data_Config_Files/yaml/: mot17.yaml
Easier_To_Use_TrackEval/configs/: MOT17_half_yolov5n.yaml  MOT17_half_yolov5s.yaml  MOT17_trian.yaml  VisDrone_test_dev_yolov5n_visdrone2019.yaml  VisDrone_test_dev_yolov5n_visdrone2019_relabel.yaml  VisDrone_test_dev_yolov5s_visdrone2019.yaml  VisDrone_test_dev_yolov5s_visdrone2019_relabel.yaml  demo.yaml
Easier_To_Use_TrackEval/scripts/: merge_visdrone_categories.py
Easier_To_Use_TrackEval/trackeval/: eval.py
Easier_To_Use_TrackEval/trackeval/datasets/: custom_dataset.py
Easier_To_Use_TrackEval/trackeval/metrics/: hota.py
Paper_Figure_Generate_Code/: draw_mot17.ipynb  draw_visdrone2019.ipynb  draw_visdrone2019_relabel.ipynb
Paper_Figure_Generate_Code/paper_use_result/yolov5n_MOT17_epoch200/: opt.yaml  results.csv
Paper_Figure_Generate_Code/paper_use_result/yolov5n_visdrone2019_epoch200/: opt.yaml  results.csv
Paper_Figure_Generate_Code/paper_use_result/yolov5n_visdrone_relabel_epoch200/: opt.yaml  results.csv
Paper_Figure_Generate_Code/paper_use_result/yolov5s_MOT17_epoch200/: opt.yaml  results.csv
Paper_Figure_Generate_Code/paper_use_result/yolov5s_visdrone2019_epoch200/: opt.yaml  results.csv
Paper_Figure_Generate_Code/paper_use_result/yolov5s_visdrone_relabel_epoch200/: opt.yaml  results.csv
UAV_Code/: 说明.txt
UAV_Code/catkin_TX2_ws/: fly_tracking_ptz.sh  fly_tracking_px4.sh
UAV_Code/catkin_TX2_ws/materials/: 下载链接.txt
UAV_Code/catkin_TX2_ws/sh/: autonomous_landing.sh  circle_tracking.sh  gps_vfh.sh  lidar_fly.sh  my_lidar_fly.sh  my_lidar_imu_fly.sh
UAV_Code/catkin_TX2_ws/sh/sh_for_P200/: aruco_tracking.sh  autonomous_landing.sh  circle_tracking.sh  collision_avoidance.sh  fly_tracking.sh  fly_tracking_gyd.sh  fly_tracking_outdoor.sh  fly_tracking_test.sh  my_lidar_imu_fly.sh  my_square_imu.sh  yolo_tracking.sh
UAV_Code/catkin_TX2_ws/src/cv4_bridge/: CMakeLists.txt
UAV_Code/catkin_TX2_ws/src/px4_command/: CMakeLists.txt  LICENSE  package.xml
UAV_Code/catkin_TX2_ws/src/px4_command/config/: Parameter_for_control.yaml  px4_pos_estimator.yaml  square.yaml  target_tracking.yaml
UAV_Code/catkin_TX2_ws/src/px4_command/launch/: px4_pos_controller.launch  tfmini.launch
UAV_Code/catkin_TX2_ws/src/px4_command/msg/: Diff.msg
UAV_Code/catkin_TX2_ws/src/serial_ros/: CMakeLists.txt  package.xml
UAV_Code/catkin_TX2_ws/src/serial_ros/msg/: Cloud_platform.msg  gimbal.msg
UAV_Code/catkin_TX2_ws/src/serial_ros/src/: CloudPlatform_data.cpp  moni.cpp  serial_node.cpp  serial_test.cpp
UAV_Code/catkin_TX2_ws/src/track_detection/: CMakeLists.txt  package.xml
UAV_Code/catkin_TX2_ws/src/track_detection/msg/: Diff.msg
UAV_Code/catkin_TX2_ws/src/track_detection/node/: README.md  cam_node.cpp  opencv_track.cpp  tensorrt_detect.cpp  tensorrt_track.cpp  yolov5_opencv_detector.cpp
tracker_result/bytetrack_yolov5n_mot17_half/: MOT17-02-DPM.txt  MOT17-04-DPM.txt  pedestrian_detailed.csv  pedestrian_summary.csv
tracker_result/bytetrack_yolov5n_visdrone2019/: pedestrian_summary.txt  uav0000009_03358_v.txt  uav0000073_00600_v.txt  uav0000073_04464_v.txt  uav0000077_00720_v.txt  uav0000088_00290_v.txt  uav0000119_02301_v.txt  uav0000120_04775_v.txt  uav0000161_00000_v.txt  uav0000188_00000_v.txt  uav0000201_00000_v.txt  uav0000249_00001_v.txt  uav0000249_02688_v.txt  uav0000297_00000_v.txt  uav0000297_02761_v.txt  uav0000306_00230_v.txt  uav0000355_00001_v.txt  uav0000370_00001_v.txt  valid_detailed.csv  valid_summary.csv
tracker_result/bytetrack_yolov5n_visdrone2019_relabel/: uav0000009_03358_v.txt  uav0000073_00600_v.txt  uav0000073_04464_v.txt  uav0000077_00720_v.txt  uav0000088_00290_v.txt  uav0000119_02301_v.txt  uav0000120_04775_v.txt  uav0000161_00000_v.txt  uav0000188_00000_v.txt  uav0000201_00000_v.txt  uav0000249_00001_v.txt  uav0000249_02688_v.txt  uav0000297_00000_v.txt  uav0000297_02761_v.txt  uav0000306_00230_v.txt  uav0000355_00001_v.txt  uav0000370_00001_v.txt  valid_detailed.csv  valid_summary.csv
tracker_result/bytetrack_yolov5s_mot17_half/: MOT17-02-DPM.txt  MOT17-04-DPM.txt  pedestrian_detailed.csv  pedestrian_summary.csv
tracker_result/bytetrack_yolov5s_visdrone2019/: pedestrian_detailed.csv  pedestrian_summary.txt  uav0000009_03358_v.txt  uav0000073_00600_v.txt  uav0000073_04464_v.txt  uav0000077_00720_v.txt  uav0000088_00290_v.txt  uav0000119_02301_v.txt  uav0000120_04775_v.txt  uav0000161_00000_v.txt  uav0000188_00000_v.txt  uav0000201_00000_v.txt  uav0000249_00001_v.txt  uav0000249_02688_v.txt  uav0000297_00000_v.txt  uav0000297_02761_v.txt  uav0000306_00230_v.txt  uav0000355_00001_v.txt  uav0000370_00001_v.txt  valid_detailed.csv  valid_summary.csv
tracker_result/bytetrack_yolov5s_visdrone2019_relabel/: pedestrian_summary.txt  uav0000009_03358_v.txt  uav0000073_00600_v.txt  uav0000073_04464_v.txt  uav0000077_00720_v.txt  uav0000088_00290_v.txt  uav0000119_02301_v.txt  uav0000120_04775_v.txt  uav0000161_00000_v.txt  uav0000188_00000_v.txt  uav0000201_00000_v.txt  uav0000249_00001_v.txt  uav0000249_02688_v.txt  uav0000297_00000_v.txt  uav0000297_02761_v.txt  uav0000306_00230_v.txt  uav0000355_00001_v.txt  uav0000370_00001_v.txt  valid_detailed.csv  valid_summary.csv
yolov5_tracker/tools/: convert_MOT17_to_yolo.py  convert_VisDrone_to_yolo.py  convert_VisDrone_to_yolo2_relabel.py  convert_VisDrone_to_yolov2.py
yolov5_tracker/tracker/: basetrack.py  deepsort.py  matching.py  track.py  track_yolov5.py  tracker_dataloader.py  uavmot.py
yolov5_tracker/tracker/config_files/: mot.yaml  mot17.yaml  mot17_half.yaml  visdrone.yaml  visdrone_relabel.yaml
yolov5_tracker/tracker/trackeval/datasets/: mot_challenge_2d_box.py
(+6 files in other folders)
